--- a/account.html
+++ b/account.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BankBoston - Mi Cuenta</title>
+  <title>BankBoston - My Accounta</title>
   <link rel="stylesheet" href="style.css">
   
   <!-- PWA Manifest -->
@@ -18,18 +18,18 @@
 <body>
   <header>
     <img src="icons/icon-192x192.png" alt="BankBoston Logo" class="header-logo">
-    <h1>BankBoston - Mi Cuenta</h1>
+    <h1>BankBoston - My Account</h1>
   </header>
 
   <main class="account-container">
     <section class="account-summary">
-      <h2>Resumen de Cuenta</h2>
-      <p>Saldo actual: <strong>$12,450.75</strong></p>
+      <h2>Account Summary 788500378-y-67783</h2>
+      <p>Current balance: <strong>$4.892.740.00</strong></p>
       <canvas id="balanceChart"></canvas>
     </section>
 
     <section class="transactions">
-      <h2>Últimas Transacciones</h2>
+      <h2>Latest Transactions</h2>
       <table>
         <thead>
           <tr>
@@ -40,18 +40,18 @@
         </thead>
         <tbody>
           <tr>
-            <td>01/08/2023</td>
-            <td>Transferencia recibida</td>
-            <td style="color: var(--green);">+$1,200.00</td>
+            <td>30/12/2024</td>
+            <td>Transfer received</td>
+            <td style="color: var(--green);">+$98.652.00</td>
           </tr>
           <tr>
-            <td>30/07/2023</td>
-            <td>Pago de servicios</td>
+            <td>30/07/2024</td>
+            <td>Payment of services</td>
             <td style="color: var(--red-alert);">-$350.50</td>
           </tr>
           <tr>
-            <td>28/07/2023</td>
-            <td>Compra en supermercado</td>
+            <td>31/07/2025</td>
+            <td>Payment of commissions</td>
             <td style="color: var(--red-alert);">-$85.30</td>
           </tr>
         </tbody>
@@ -59,16 +59,16 @@
     </section>
 
     <section class="actions">
-      <h2>Acciones</h2>
-      <button id="transferBtn">Transferencia</button>
-      <button id="payBtn">Pagar servicios</button>
-      <button id="cardBtn">Tarjetas</button>
-      <button id="logoutBtn">Cerrar sesión</button>
+      <h2>Actions</h2>
+      <button id="transferBtn">Transfer</button>
+      <button id="payBtn">Pay for services</button>
+      <button id="cardBtn">Cards</button>
+      <button id="logoutBtn">Log out</button>
     </section>
   </main>
 
   <footer>
-    <p>© 2023 BankBoston. Todos los derechos reservados. | <a href="#">Términos y condiciones</a></p>
+    <p>© 2023 BankBoston. All rights reserveds. | <a href="#">Terms and conditions</a></p>
   </footer>
 
   <script src="app.js"></script>
