--- a/account.html
+++ b/account.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <img src="icons/icon-192x192.png" alt="BankBoston Logo" class="header-logo">
-    <h1>BankBoston - My Account</h1>
+    <h1>BankBoston - Funds temporarily blocked due to federal investigation. DC No. 3:28-cr-00741-TWR-2</h1>
   </header>
 
   <main class="account-container">
