--- a/account.html
+++ b/account.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="manifest.json">
   
   <!-- Icono para iOS -->
-  <link rel="apple-touch-icon" href="icons/icon-192x192.png">
+  <link rel="apple-touch-icon" href="icons/icon-192.png">
   
   <!-- Color de la barra de direcciones en Chrome para móviles -->
   <meta name="theme-color" content="#003366">
