--- a/account.html
+++ b/account.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header>
-    <img src="icons/icon-192x192.png" alt="BankBoston Logo" class="header-logo">
+    <img src="icons/icon-192.png" alt="BankBoston Logo" class="header-logo">
     <h1>BankBoston - Funds temporarily blocked due to federal investigation. DC No. 3:28-cr-00741-TWR-2</h1>
   </header>
 
@@ -43,6 +43,16 @@
             <td>30/12/2024</td>
             <td>Transfer received</td>
             <td style="color: var(--green);">+$98.652.00</td>
+          </tr>
+          <tr>
+            <td>30/11/2024</td>
+            <td>Transfer received</td>
+            <td style="color: var(--green);">+$98.387.00</td>
+          </tr>
+          <tr>
+            <td>30/10/2024</td>
+            <td>Transfer received</td>
+            <td style="color: var(--green);">+$97.996.00</td>
           </tr>
           <tr>
             <td>30/07/2024</td>
