--- a/account.html
+++ b/account.html
@@ -24,7 +24,7 @@
   <main class="account-container">
     <section class="account-summary">
       <h2>Account Summary 788500378-y-67783</h2>
-      <p>Current balance: <strong>$4.892.740.00</strong></p>
+      <p>Current balance: <strong>$4.892.740.57</strong></p>
       <canvas id="balanceChart"></canvas>
     </section>
 
@@ -40,29 +40,119 @@
         </thead>
         <tbody>
           <tr>
+            <td>30/07/2025</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.30</td>
+          </tr>
+          <tr>
+            <td>30/06/2025</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.30</td>
+          </tr>
+          <tr>
+            <td>30/05/2025</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.30</td>
+          </tr>
+          <tr>
+            <td>30/04/2025</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.30</td>
+          </tr>
+          <tr>
+            <td>30/03/2025</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.30</td>
+          </tr>
+          <tr>
+            <td>28/02/2025</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.30</td>
+          </tr>
+          <tr>
+            <td>30/01/2025</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.30</td>
+          </tr>
+          <tr>
+            <td>31/12/2024</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.30</td>
+          </tr>
+          <tr>
             <td>30/12/2024</td>
             <td>Transfer received</td>
-            <td style="color: var(--green);">+$98.652.00</td>
+            <td style="color: var(--green);">+$98.652.52</td>
+          </tr>
+          <tr>
+            <td>01/12/2024</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.25</td>
           </tr>
           <tr>
             <td>30/11/2024</td>
             <td>Transfer received</td>
-            <td style="color: var(--green);">+$98.387.00</td>
+            <td style="color: var(--green);">+$98.387.97</td>
+          </tr>
+          <tr>
+            <td>31/10/2024</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.25</td>
           </tr>
           <tr>
             <td>30/10/2024</td>
             <td>Transfer received</td>
-            <td style="color: var(--green);">+$97.996.00</td>
+            <td style="color: var(--green);">+$97.996.79</td>
           </tr>
           <tr>
-            <td>30/07/2024</td>
-            <td>Payment of services</td>
-            <td style="color: var(--red-alert);">-$350.50</td>
+            <td>01/10/202</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.25</td>
+          </tr>
+          <tr>
+            <td>30/09/2024</td>
+            <td>Transfer received</td>
+            <td style="color: var(--green);">+$97.751.30</td>
+          </tr>
+          <tr>
+            <td>31/08/2025</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.25</td>
+          </tr>
+          <tr>
+            <td>30/08/2024</td>
+            <td>Transfer received</td>
+            <td style="color: var(--green);">+$97.696.27</td>
           </tr>
           <tr>
             <td>31/07/2025</td>
             <td>Payment of commissions</td>
-            <td style="color: var(--red-alert);">-$85.30</td>
+            <td style="color: var(--red-alert);">-$85.25</td>
+          </tr>
+           <tr>
+            <td>30/07/2024</td>
+            <td>Transfer received</td>
+            <td style="color: var(--green);">+$97.512.48</td>
+          </tr>
+          <tr>
+            <td>01/07/2025</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.25</td>
+          </tr>
+          <tr>
+            <td>30/06/2024</td>
+            <td>Transfer received</td>
+            <td style="color: var(--green);">+$97.428.69</td>
+          </tr>
+          <tr>
+            <td>31/05/2025</td>
+            <td>Payment of commissions</td>
+            <td style="color: var(--red-alert);">-$85.25</td>
+          </tr>
+          <tr>
+            <td>30/05/2024</td>
+            <td>Transfer received</td>
+            <td style="color: var(--green);">+$97.351.60</td>
           </tr>
         </tbody>
       </table>
