--- a/account.html
+++ b/account.html
@@ -18,12 +18,12 @@
 <body>
   <header>
     <img src="icons/icon-192.png" alt="BankBoston Logo" class="header-logo">
-    <h1>BankBoston - Funds temporarily blocked due to federal investigation. DC No. 3:28-cr-00741-TWR-2</h1>
+    <h1>BankBoston</h1>
   </header>
 
   <main class="account-container">
     <section class="account-summary">
-      <h2>Account Summary 788500378-y-67783</h2>
+      <h2>Account Summary 788500378-y-67783 (Funds temporarily blocked due to federal investigation. DC No. 3:28-cr-00741-TWR-2)</h2>
       <p>Current balance: <strong>$4.892.740.57</strong></p>
       <canvas id="balanceChart"></canvas>
     </section>
@@ -105,7 +105,7 @@
             <td style="color: var(--green);">+$97.996.79</td>
           </tr>
           <tr>
-            <td>01/10/202</td>
+            <td>01/10/2024</td>
             <td>Payment of commissions</td>
             <td style="color: var(--red-alert);">-$85.25</td>
           </tr>
@@ -115,7 +115,7 @@
             <td style="color: var(--green);">+$97.751.30</td>
           </tr>
           <tr>
-            <td>31/08/2025</td>
+            <td>31/08/2024</td>
             <td>Payment of commissions</td>
             <td style="color: var(--red-alert);">-$85.25</td>
           </tr>
@@ -125,7 +125,7 @@
             <td style="color: var(--green);">+$97.696.27</td>
           </tr>
           <tr>
-            <td>31/07/2025</td>
+            <td>31/07/2024</td>
             <td>Payment of commissions</td>
             <td style="color: var(--red-alert);">-$85.25</td>
           </tr>
@@ -135,7 +135,7 @@
             <td style="color: var(--green);">+$97.512.48</td>
           </tr>
           <tr>
-            <td>01/07/2025</td>
+            <td>01/07/2024</td>
             <td>Payment of commissions</td>
             <td style="color: var(--red-alert);">-$85.25</td>
           </tr>
@@ -145,7 +145,7 @@
             <td style="color: var(--green);">+$97.428.69</td>
           </tr>
           <tr>
-            <td>31/05/2025</td>
+            <td>31/05/2024</td>
             <td>Payment of commissions</td>
             <td style="color: var(--red-alert);">-$85.25</td>
           </tr>
